--- a/projects/zenGarden/main.css
+++ b/projects/zenGarden/main.css
@@ -1,1 +1,49 @@
-@import url(http://fonts.googleapis.com/css?family=Julius+Sans+One|Libre+Baskerville:400,400italic);
+* {
+    text-align: center
+}
+h1 {
+    font-family: 'Julius Sans One', sans-serif;
+}
+
+h3 {
+    font-family: 'Julius Sans One', sans-serif;
+}
+
+body {
+    font-family: 'Libre Baskerville', sans-serif;
+}
+
+.designSelection, .design-name, .zen-resources {
+    font-family: 'Julius Sans One', sans-serif;
+}
+
+.design-archives {
+    font-family:'verdemoderna'
+}
+
+@font-face {
+	font-family: 'verdemoderna';
+	src:url('verdemoderna.eot');
+	src:url('verdemoderna.eot?#iefix') format('embedded-opentype'),
+		url('verdemoderna.woff') format('woff'),
+		url('verdemoderna.ttf') format('truetype'),
+		url('verdemoderna.svg#verdemoderna') format('svg');
+	font-weight: normal;
+	font-style: normal;
+}      
+
+header {
+    background-image: url("http://www.csszengarden.com/214/huntington.jpg");
+    text-align: center;
+    max-height:300px;
+}
+#cir {
+    max-width: 50px;
+    max-height: 50px;
+}
+
+.bar {
+    background-image: url("http://www.csszengarden.com/214/koi.jpg");
+    height: 200px;
+    font-size: 30px
+}
