--- a/projects/site-redux/src/first.css
+++ b/projects/site-redux/src/first.css
@@ -1,15 +1,23 @@
 * {
     font-family: monospace;
-    color: gray;
-    background-color: cornsilk
-}
-
-.snow {
-    max-width: 100%;
-    max-height: 500px;
+    color: cornsilk;
 }
 
 .jon {
-    max-width: 100%;
-    height: 400px
+  max-width: 100%;
+  height: 200px;
+  position: absolute;
+  top: 300px;
+  left: 0;
+}
+
+
+@media only screen and (min-width: 750px) {
+  .jon {
+      max-width: 100%;
+      height: 300px;
+      position:absolute;
+      left: 450px;
+      top: 0;
+  }
 }
