--- a/projects/site-redux/src/third.css
+++ b/projects/site-redux/src/third.css
@@ -1,16 +1,15 @@
-* {
-    font-family: monospace;
-}
 
 .doggo {
-    max-width: 500px;
-    max-height: 500px;
+    max-width: 100%;
+    max-height: 300px;
 }
 
+
 .but {
+    background-color: black;
     position: absolute;
     left: 0px;
-    top: 560px;
+    top: 420px;
     height: 40px;
     width: 80px;
 }
